# starmap-svg

./: .gitignore  pyproject.toml
src/starmap/: starmap.py
src/starmap.egg-info/: PKG-INFO  SOURCES.txt
starmap.egg-info/: entry_points.txt
